# lib_audio_features

./: .gitignore  Jenkinsfile  README.md  requirements.txt
examples/mfcc/: CmakeLists.txt
examples/mfcc/src/: main.c  xs3_fft_lut.h
examples/xs3_try/: CmakeLists.txt
examples/xs3_try/src/: main.c  xs3_fft_lut.c
lib_audio_features/: README.md
lib_audio_features/src/: ln.c  ln.h  mel_filter.c  mel_filter.h  mfcc.c  mfcc.h
python/: __init__.py  mel.py  setup.py
python/mel/: extract_features.py  feature_utils.py  gen_mel_fb.py  mel_filter.py
tests/: compare.py
tests/bringup_c/: CmakeLists.txt  Makefile
tests/bringup_c/src/: main.c  main_functions.cc
tests/bringup_py/: features_test.py  raw_features.py  setup.py
tests/equivalence/: CMakeLists.txt  CmakeLists.txt  test_ln.py  test_mels.py
tests/equivalence/src/: main.c
tests/xs3_try/: CmakeLists.txt  bfp_ln.py
tests/xs3_try/src/: main.c  util.xc
